# Omni_vision

./: .gitignore  readme.md
src/omni/: CMakeLists.txt  file_structure.txt  package.xml
src/omni/config/: omni.yaml
src/omni/src/: omni_node.cpp
src/omni/tasks/: detector.cpp  yolo.cpp
src/omni/tasks/yolos/: yolov8.cpp  yolov8.hpp
src/omni_interfaces/: CMakeLists.txt  package.xml
src/rm_serial_driver/: .gitignore  .gitmodules  CMakeLists.txt  package.xml
src/rm_serial_driver/config/: serial_driver.yaml
src/rm_serial_driver/include/host-protocol/: README.md  protocol.h
src/rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
src/rm_serial_driver/src/: rm_serial_driver.cpp
